--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 	</parent>
 
 	<groupId>kr.ac.hansung.cse</groupId>
-	<artifactId>helloSpringBoot</artifactId>
+	<artifactId>productSpringBoot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>helloSpringBoot</name>
+	<name>productSpringBoot</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -25,6 +25,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -34,7 +35,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,6 +52,7 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
